# tree-sitter-hy

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-hy.pc.in
bindings/c/tree_sitter/: tree-sitter-hy.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hy/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHyTests/: TreeSitterHyTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/: highlight_examples.hy
test/corpus/: basic.txt  identifier.txt  numeric.txt  sequence.txt  string.txt  structured.txt
test/highlight/: data_augmenter.hy  data_augmenter.py
